--- a/css/promo.CSS
+++ b/css/promo.CSS
@@ -117,3 +117,18 @@ main > h1 {
 .btn-comprar:hover {
   background-color: var(--color-primario-hover);
 }
+
+main > h1 {
+  font-size: 2.8rem !important;
+  font-weight: 700 !important;
+  text-align: center !important;
+  margin: 40px 0 20px 0 !important;
+  color: #0cc0df !important;
+  text-shadow:
+    0 0 5px #09a8c0 !important,
+    0 0 10px #09a8c0 !important,
+    0 0 20px #09a8c0 !important,
+    0 0 30px #0cc0df !important;
+  letter-spacing: 2px !important;
+}
+
