--- a/css/info.css
+++ b/css/info.css
@@ -17,9 +17,9 @@ header h1 {
     font-size: 2.8em;
     margin-bottom: 20px;
     text-shadow:
-        0 0 5px #0cc0df,
-        0 0 10px #0cc0df,
-        0 0 20px #0cc0df;
+        0 0 5px #00eaff,
+        0 0 10px #00eaff,
+        0 0 20px #00eaff;
 }
 
 /* Botones en header */
